- BUG: Issue #413: wrong unescaped path
       in Log Dialog. (Stefan)
- BUG: Issue #414: Words with german umlauts not
       highlighted after log message search. (Stefan)
- BUG: Issue #415: Check-for-modifications dialog shows
       folders as files for sparse checkouts. (Stefan)
- BUG: Issue #418: Unexpected warning - Non-recursive
       commit of moved/renamed folders. (Stefan)

Version 1.7.9
- BUG: Issue #394: crash when refreshing
       status list control. (Stefan)
- BUG: Issue #396: crashes in various commands if the
       config file is invalid. (Stefan)
- BUG: Issue #398: Copied files don't get reverted
       to recycle bin. (Stefan)
- BUG: Issue #399: Selecting an url from the
       repbrowser clears the url. (Stefan)
- BUG: Issue #400: repo browser crash when
       refreshing. (Stefan)
- BUG: Issue #401: Exception shown when blame is
       called for an url. (Stefan)
- BUG: Issue #402: various crashes in
       other applications. (Stefan)
- BUG: Issue 404: checkbox width calculated wrong
       if visual styles are disabled. (Stefan)

Version 1.7.8
- BUG: Issue #297: "Show changes as unified diff"
       from Log window fails. (Stefan)
- BUG: Issue #299: crash in repobrowser
       when refreshing. (Stefan)
- BUG: Issue #301: Crash in log dialog when
       selecting all revisions with Ctrl-A. (Stefan)
- BUG: issue #302: segfault in status cache. (Stefan)
- BUG: Issue #304: buffer overflow when
       saving column data. (Stefan)
- BUG: Issue #305: diff from log for
       url fails. (Stefan)
- BUG: Issue #298: crash when editing files
       in repo browser. (Stefan)
- BUG: Issue #307: Repository browser does not
       check empty selections. (Stefan)
- BUG: Issue #308: closing merge wizard with
       log dialog open segfaults. (Stefan)
- BUG: Issue #309: file diff dialog
       can segfault. (Stefan)
- BUG: Issue #315: long paths handled
       incorrectly. (Stefan)
- BUG: Issue #316: Threads not correctly synchronized